--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -1,12 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap');
 :root{
      --primary-color: #612674; 
+     --font-oxygen: "Oxygen", sans-serif;
+     --weight-light: 300;
+     --weight-regular: 400;
+     --weight-bold: 700;
+     
 }
 *{
      padding: 0;
      margin: 0;
      box-sizing: border-box;
 }
-html{
+h1,h2,h3{
+     font-family: var(--font-oxygen);
      
 }
 .maxWidth{
@@ -64,17 +71,103 @@ html{
            background-color: color-mix(in srgb, var(--primary-color) , white 80%);
      }
 
+     /*heroBanner*/
+    
 }
+
+
+
 
 /*hero banner*/
 .heroBanner{
      text-align: center;
-     background-color: #f5f5f5;
-     padding: 1em;
+     background-color: #f0f0f0;
+     padding: .8em;
 }
 .heroBanner_iconPlay{
      height: 5em;
      width: 5em;
      display: none;
 
+}
+.heroBanner_title{
+     color: var(--primary-color);
+     font-size:1.5em;
+}
+.heroBanner_subtitle{
+     font-size: 1em;
+     color: color-mix(in srgb, var(--primary-color), white  50%);
+     line-height: 1.5; /*espaço entre as linhas*/
+     
+}
+.heroBanner_btn{
+     display: inline-block;
+     padding: .9em 2em;
+     margin-top: 1em;
+     background-color: #58c4c4;
+     text-decoration: none;
+     color: white;
+     border-radius: 5px;
+}
+/*deve colocar m baixo para nao sobreescrever*/
+@media screen and (min-width: 46em){
+
+     .heroBanner{
+     background-color: var(--primary-color);    
+     }
+     .heroBanner_iconPlay{
+     margin: auto;
+     display: block;
+
+}
+.heroBanner_title{
+     color: white;
+     margin-top: 1em;
+     
+}
+.heroBanner_subtitle{
+     color: white;
+     
+     
+}
+}
+@media screen and (min-width: 56.25em){
+     .heroBanner{
+          background-image: url(../images/bg_topo_1198x670.jpg);
+          /*aumenta ou dimunui com a mesma proporção da imagem,ou seja 1198 por 670*/
+          aspect-ratio: 1198 / 670;
+          display: flex;
+          justify-content:center ;
+          align-items: flex-end;
+
+
+     }
+     .heroBanner .maxWidth{
+          margin: initial; /*para voltar o margin original antes das configurações, ou margin 0*/
+          margin-bottom: 4em;
+          width: 75%;
+     }
+}
+@media screen and (min-width: 74em){
+     .heroBanner{
+          background-image: url(../images/bg_topo_1600x1374.jpg);
+          background-position: center top;
+          background-repeat: no-repeat;
+          background-color: var(--primary-color);
+          max-height:80vh;
+          width: 100%;
+     /* ele so aumenta ate 80% */
+     }
+
+     .heroBanner .maxWidth{
+          width: 50%;
+     }
+     .heroBanner_iconPlay{
+          width: 7em;
+          height: 7em;
+     }
+     .heroBanner_contain{
+          background-color: rgba(0, 0, 0, .4);
+          padding: 1em;
+     }
 }
